<resources>
    <string name="app_name">Surakshit</string>
    <string name="action_settings">Settings</string>
    <string name="text_sync">Sync</string>
    <string name="text_start_connection">Connection</string>
    <string name="text_connect"></string>
    <string name="text_GPS">GPS Trail</string>
    <string name="health">Health</string>
    <string name="food">Food</string>
    <string name="shelter">Shelter</string>
    <string name="victim">Victim</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="sms">SMS</string>
    <string name="start_sync">Starting to Sync</string>
    <string name="press_back_to_exit">Please click BACK again to exit</string>
    <string name="gps_msg">GPS is disabled in your device. Otherwise you will not be able to collect data !!</string>
    <string name="enable_gps">Turn on Location</string>
    <string name="cancel">Cancel</string>
    <string name="enabled_gps">GPS is now enabled..</string>
    <string name="files_discard_msg">All files taken in this session will be deleted !</string>
    <string name="discard_files">Discard Files</string>
    <string name="files_discarded">Files DISCARDED</string>
    <string name="aud_rec_start">Recording started !</string>
    <string name="aud_rec_success">Audio Recorded successfully</string>
    <string name="file_success">File Successfully Saved</string>
    <string name="sms_edittext_error">Please Give Some Msg!</string>
    <string name="text_select_appropriately">Select Information Appropriately</string>
    <string name="phoneNo">Phone Number</string>
    <string name="msg_Imp">Msg Importance (default 50)</string>
    <string name="destination">Destination (Default defaultMCS)</string>
    <string name="msg_taken">Msg Taken</string>
    <string name="writesetting_msg">Allow App to modify system settings, so it can start connection.</string>
    <string name="writesetting_head">One More Thing</string>
    <string name="allow_setting">allow changing settings</string>
    <string name="discard">DISCARD</string>
    <string name="submit">SUBMIT</string>
    <string name="add_text">Add Text</string>
    <string name="back">BACK</string>
    <string name="save">save</string>
    <string name="enter_msg">Enter Message</string>
    <string name="cus_input">Custom Input</string>
    <string name="reset">Reset</string>
    <string name="reset_working">Reset all collected data !</string>
    <string name="reset_done">Reset Done !</string>
    <string name="reset_all_data">Reset all App data !</string>
    <string name="resetall">Reset All</string>
    <string name="exit">Exit</string>


    <string-array name="health_array">
        <item>Select</item>
        <item>Fever</item>
        <item>Typhoid</item>
        <item>Jaundice</item>
        <item>Stomach Upset</item>
        <item>Skin Infection</item>
        <item>Chicken Pox</item>
        <item>Common Cold</item>
        <item>Diarrhea</item>
    </string-array>

    <string-array name="food_array">
        <item>Select</item>
        <item>Rice</item>
        <item>Wheat</item>
        <item>Dal</item>
        <item>Maize</item>
        <item>Water</item>
    </string-array>

    <string-array name="victim_array">
        <item>Select</item>
        <item>Population affected estimated</item>
        <item>Affected children under 5 years</item>
        <item>Affected pregnant women</item>
        <item>Affected Lactating mothers</item>
        <item>Dead</item>
        <item>Injured</item>
        <item>Missing</item>
        <item>Homeless</item>
        <item>Displaced</item>
        <item>Evacuated</item>
        <item>Orphans</item>
        <item>Destitute</item>
        <item>Traumatised population</item>
    </string-array>

    <string-array name="shelter_array">
        <item>Select</item>
        <item>Where evacuees are taking shelter</item>
        <item>Availability of temporary shelter</item>
        <item>Availability of house building materials</item>
        <item>Support from local government</item>
    </string-array>

    <string-array name="num_array">
        <item>Select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>Custom</item>
    </string-array>

    <string-array name="lang_list">
        <item>English</item>
        <item>বাংলা</item>
        <item>हिंदी</item>
    </string-array>


    <!--duplicate array for translation-->


    <string-array name="trans_health_array">
        <item>Select</item>
        <item>Fever</item>
        <item>Typhoid</item>
        <item>Jaundice</item>
        <item>Stomach Upset</item>
        <item>Skin Infection</item>
        <item>Chicken Pox</item>
        <item>Common Cold</item>
        <item>Diarrhea</item>
    </string-array>

    <string-array name="trans_food_array">
        <item>Select</item>
        <item>Rice</item>
        <item>Wheat</item>
        <item>Dal</item>
        <item>Maize</item>
        <item>Water</item>
    </string-array>

    <string-array name="trans_victim_array">
        <item>Select</item>
        <item>Population affected estimated</item>
        <item>Affected children under 5 years</item>
        <item>Affected pregnant women</item>
        <item>Affected Lactating mothers</item>
        <item>Dead</item>
        <item>Injured</item>
        <item>Missing</item>
        <item>Homeless</item>
        <item>Displaced</item>
        <item>Evacuated</item>
        <item>Orphans</item>
        <item>Destitute</item>
        <item>Traumatised population</item>
    </string-array>

    <string-array name="trans_shelter_array">
        <item>Select</item>
        <item>Where evacuees are taking shelter</item>
        <item>Availability of temporary shelter</item>
        <item>Availability of house building materials</item>
        <item>Support from local government</item>
    </string-array>

    <string-array name="trans_num_array">
        <item>Select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_ui__map">UI_Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
