<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.disarm.sanna.pdm.MainActivity">
    <item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never" />

    <item
        android:id="@+id/webView"
        android:orderInCategory="100"
        android:icon="@drawable/webhook"
        app:showAsAction="always"
        android:title="WebView" />
    <item
        android:id="@+id/mapView"
        android:orderInCategory="100"
        android:icon="@drawable/route"
        app:showAsAction="always"
        android:title="MapView" />

    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/resetall"
        android:orderInCategory="100"
        android:title="@string/resetall"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
